--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/custom.css">
     <script src="js/jquery-3.2.1.min.js"></script>
-    <script src="main.js"></script>
+    <script src="js/main.js"></script>
   </head>
   <body>
 
