--- a/main.html
+++ b/main.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/custom.css">
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/main.js"></script>
+    <link rel="stylesheet" type="text/css" href="font-awsome/font-awesome-4.7.0/css/font-awesome.css">
   </head>
   <body>
 
@@ -14,7 +15,8 @@
           <span class="font-black font-22">Hubstaff</span> <span class="font-grey font-22">Projects</span>
         </div>
         <div class="span4 offset8">
-          right
+          <i class="fa fa-search fa-lg search" aria-hidden="true"></i>
+          <i class="fa fa-bell-o fa-lg" aria-hidden="true"></i>
         </div>
       </div>
       <div class="row action-bar">
@@ -34,7 +36,7 @@
             <span class="task-list-label">Ideas/Tasks</span>
           </div>
           <div class="add-card">
-            <input type="text" placeholder="Add a card" value="">
+            <input type="text" placeholder="Add a card" value="" class="js_add" data-ref="ideas">
           </div>
           <div id="ideas">
           </div>
@@ -44,7 +46,7 @@
             <span class="task-list-label">In Progress</span>
           </div>
           <div class="add-card">
-            <input type="text" placeholder="Add a card" value="">
+            <input type="text" placeholder="Add a card" value="" class="js_add" data-ref="progress">
           </div>
           <div id="progress">
           </div>
@@ -54,7 +56,7 @@
             <span class="task-list-label">Ready for Review</span>
           </div>
           <div class="add-card">
-            <input type="text" placeholder="Add a card" value="">
+            <input type="text" placeholder="Add a card" value="" class="js_add" data-ref="review">
           </div>
           <div id="review">
           </div>
@@ -64,7 +66,7 @@
             <span class="task-list-label">Approved</span>
           </div>
           <div class="add-card">
-            <input type="text" placeholder="Add a card" value="">
+            <input type="text" placeholder="Add a card" value="" class="js_add" data-ref="approved">
           </div>
           <div id="approved">
           </div>
